Jekyll build, preview pr/347 (on:pull_request)

--- a/pr/347/learn/intrinsics/ABS.html
+++ b/pr/347/learn/intrinsics/ABS.html
@@ -44763,7 +44763,7 @@ associated type.</p>
 denoted <strong>|x|</strong>, is the magnitude of <strong>x</strong> without regard to its sign.</p>
 
 <p>The absolute value of a number may be thought of as its distance from
-zero, which is the definition used by <strong>abs(3)</strong> when dealing with <em>complex</em>
+zero, which is the definition used by <strong>abs</strong>(3) when dealing with <em>complex</em>
 values (<em>see below</em>).</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
