--- a/pr/347/learn/intrinsics/ANY.html
+++ b/pr/347/learn/intrinsics/ANY.html
@@ -44774,7 +44774,7 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p><strong>any(mask, dim)</strong> determines if any of the values in the logical
-array <strong>mask</strong> along dimension <strong>DIM</strong> are <strong>.TRUE.</strong>.</p>
+array <strong>mask</strong> along dimension <strong>dim</strong> are <strong>.true.</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
@@ -44798,9 +44798,9 @@ between one and the rank of mask.</dd>
 <h2 id="returns"><strong>Returns</strong></h2>
 
 <p><strong>any(mask)</strong> returns a scalar value of type <em>logical</em> where the kind type
-parameter is the same as the kind type parameter of <strong>mask</strong>. If <strong>DIM</strong> is
+parameter is the same as the kind type parameter of <strong>mask</strong>. If <strong>dim</strong> is
 present, then <strong>any(mask, dim)</strong> returns an array with the rank of <strong>mask</strong>
-minus 1. The shape is determined from the shape of <strong>mask</strong> where the <strong>DIM</strong>
+minus 1. The shape is determined from the shape of <strong>mask</strong> where the <strong>dim</strong>
 dimension is elided.</p>
 
 <ol>
