--- a/pr/347/learn/intrinsics/CHAR.html
+++ b/pr/347/learn/intrinsics/CHAR.html
@@ -44882,7 +44882,7 @@ parameter of the result.</dd>
 
 <h2 id="note"><strong>Note</strong></h2>
 
-<p>See <a href="CHAR"><strong>ichar(3)</strong></a> for a discussion of converting between numerical
+<p>See <a href="CHAR"><strong>ichar</strong>(3)</a> for a discussion of converting between numerical
 values and formatted string representations.</p>
 
 <h2 id="standard"><strong>Standard</strong></h2>
@@ -44891,9 +44891,9 @@ values and formatted string representations.</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><a href="ACHAR"><strong>achar(3)</strong></a>,
-<a href="IACHAR"><strong>iachar(3)</strong></a>,
-<a href="ICHAR"><strong>ichar(3)</strong></a></p>
+<p><a href="ACHAR"><strong>achar</strong>(3)</a>,
+<a href="IACHAR"><strong>iachar</strong>(3)</a>,
+<a href="ICHAR"><strong>ichar</strong>(3)</a></p>
 
 <p>Functions that perform operations on character strings, return lengths
 of arguments, and search for certain arguments:</p>
