--- a/pr/347/learn/intrinsics/CO_UBOUND.html
+++ b/pr/347/learn/intrinsics/CO_UBOUND.html
@@ -44869,31 +44869,31 @@
 
 <h2 id="syntax"><strong>Syntax</strong></h2>
 
-<p>result = <strong>CO_UBOUND</strong>(coarray [, dim [, kind]])</p>
+<p>result = <strong>co_ubound</strong>(coarray [, dim [, kind]])</p>
 
 <h2 id="description"><strong>Description</strong></h2>
 
 <p>Returns the upper cobounds of a coarray, or a single upper cobound along
-the DIM codimension.</p>
+the <strong>dim</strong> codimension.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>Shall be an coarray, of any type.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) Shall be a scalar <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
@@ -44902,9 +44902,9 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of kind KIND. If KIND is absent,
-the return value is of default integer kind. If DIM is absent, the
-result is an array of the lower cobounds of COARRAY. If DIM is present,
+<p>The return value is of type <em>integer</em> and of kind <strong>kind</strong>. If <strong>kind</strong> is absent,
+the return value is of default integer kind. If <strong>dim</strong> is absent, the
+result is an array of the lower cobounds of <strong>coarray</strong>. If <strong>dim</strong> is present,
 the result is a scalar corresponding to the lower cobound of the array
 along that codimension.</p>
 
