--- a/pr/347/learn/intrinsics/EOSHIFT.html
+++ b/pr/347/learn/intrinsics/EOSHIFT.html
@@ -44920,7 +44920,7 @@ present then the following are copied in depending on the type of <strong>array<
     <p>Logical .false.</p>
   </li>
   <li>
-    <p><strong>Character</strong>(LEN) LEN blanks</p>
+    <p><strong>Character</strong>(len) LEN blanks</p>
   </li>
 </ul>
 
