--- a/pr/347/learn/intrinsics/GAMMA.html
+++ b/pr/347/learn/intrinsics/GAMMA.html
@@ -45022,7 +45022,7 @@ t\*\*{x-1}{\\mathrm{e}}\*\*{__-t__}\\,{\\mathrm{d}}t</script>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p>Logarithm of the Gamma function: <a href="LOG_GAMMA"><strong>log_gamma(3)</strong></a></p>
+<p>Logarithm of the Gamma function: <a href="LOG_GAMMA"><strong>log_gamma</strong>(3)</a></p>
 
 <p><a href="https://en.wikipedia.org/wiki/Gamma_function">Wikipedia: Gamma_function</a></p>
 
