--- a/pr/347/learn/intrinsics/IACHAR.html
+++ b/pr/347/learn/intrinsics/IACHAR.html
@@ -44947,15 +44947,14 @@ character position of C.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>C</strong></dt>
-      <dd>Shall be a scalar <em>character</em>, with <strong>intent</strong>(in)</dd>
+      <dt><strong>c</strong></dt>
+      <dd>Shall be a scalar <em>character</em>, with <em>intent(in)</em></dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
-/bin/bash: pb0: command not found
 parameter of the result.</dd>
     </dl>
   </li>
@@ -44963,7 +44962,7 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of kind KIND. If KIND is absent,
+<p>The return value is of type <em>integer</em> and of kind <strong>kind</strong>. If <strong>kind</strong> is absent,
 the return value is of default integer kind.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
@@ -44997,7 +44996,7 @@ the return value is of default integer kind.</p>
 
 <h2 id="note"><strong>Note</strong></h2>
 
-<p>See <a href="ICHAR"><strong>ichar(3)</strong></a> for a discussion of converting between numerical
+<p>See <a href="ICHAR"><strong>ichar</strong>(3)</a> for a discussion of converting between numerical
 values and formatted string representations.</p>
 
 <h2 id="standard"><strong>Standard</strong></h2>
@@ -45006,9 +45005,9 @@ values and formatted string representations.</p>
 
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><a href="ACHAR"><strong>achar(3)</strong></a>,
-<a href="CHAR"><strong>char(3)</strong></a>,
-<a href="ICHAR"><strong>ichar(3)</strong></a></p>
+<p><a href="ACHAR"><strong>achar</strong>(3)</a>,
+<a href="CHAR"><strong>char</strong>(3)</a>,
+<a href="ICHAR"><strong>ichar</strong>(3)</a></p>
 
 <p>Functions that perform operations on character strings, return lengths
 of arguments, and search for certain arguments:</p>
