--- a/pr/347/learn/intrinsics/ICHAR.html
+++ b/pr/347/learn/intrinsics/ICHAR.html
@@ -44957,13 +44957,13 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>ICHAR</strong>(C) returns the code for the character in the system’s native
+<p><strong>ichar(c)</strong> returns the code for the character in the system’s native
 character set. The correspondence between characters and their codes is
 not necessarily the same across different Fortran implementations. For
 example, a platform using EBCDIC would return different values than an
 ASCII platform.</p>
 
-<p>See <strong>IACHAR</strong>(3) for specifically working with the ASCII character
+<p>See <strong>iachar</strong>(3) for specifically working with the ASCII character
 set.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -44971,13 +44971,13 @@ set.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>C</strong></dt>
+      <dt><strong>c</strong></dt>
       <dd>Shall be a scalar <em>character</em>, with <strong>intent</strong>(in)</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
@@ -44986,8 +44986,8 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of kind KIND. If KIND is absent,
-the return value is of default integer kind.</p>
+<p>The return value is of type <em>integer</em> and of kind <strong>kind</strong>. If <strong>kind</strong> is absent,
+the return value is of default <em>integer</em> kind.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
