--- a/pr/347/learn/intrinsics/IMAGE_INDEX.html
+++ b/pr/347/learn/intrinsics/IMAGE_INDEX.html
@@ -44964,15 +44964,15 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>COARRAY</strong></dt>
+      <dt><strong>coarray</strong></dt>
       <dd>Coarray of any type.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SUB</strong></dt>
+      <dt><strong>sub</strong></dt>
       <dd>default integer rank-1 array of a size equal to the corank of
-COARRAY.</dd>
+<strong>coarray</strong>.</dd>
     </dl>
   </li>
 </ul>
