--- a/pr/347/learn/intrinsics/ISHFT.html
+++ b/pr/347/learn/intrinsics/ISHFT.html
@@ -44971,11 +44971,11 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>ISHFT returns a value corresponding to I with all of the bits shifted
-SHIFT places. A value of SHIFT greater than zero corresponds to a left
+<p><strong>ishft</strong>(3) returns a value corresponding to <strong>i</strong> with all of the bits shifted
+<strong>shift</strong> places. A value of <strong>shift</strong> greater than zero corresponds to a left
 shift, a value of zero corresponds to no shift, and a value less than
-zero corresponds to a right shift. If the absolute value of SHIFT is
-greater than <strong>bit_size</strong>(i), the value is undefined. Bits shifted out
+zero corresponds to a right shift. If the absolute value of <strong>shift</strong> is
+greater than <strong>bit_size(i)</strong>, the value is undefined. Bits shifted out
 from the left end or right end are lost; zeros are shifted in from the
 opposite end.</p>
 
@@ -44984,13 +44984,13 @@ opposite end.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
@@ -44998,7 +44998,7 @@ opposite end.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of the same kind as I.</p>
+<p>The return value is of type <em>integer</em> and of the same kind as <strong>i</strong>.</p>
 
 <h2 id="standard"><strong>Standard</strong></h2>
 
