--- a/pr/347/learn/intrinsics/ISHFTC.html
+++ b/pr/347/learn/intrinsics/ISHFTC.html
@@ -44969,32 +44969,32 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>ISHFTC returns a value corresponding to I with the rightmost SIZE bits
-shifted circularly SHIFT places; that is, bits shifted out one end are
-shifted into the opposite end. A value of SHIFT greater than zero
+<p><strong>ishftc</strong>(3) returns a value corresponding to <strong>i</strong> with the rightmost <strong>size</strong> bits
+shifted circularly <strong>shift</strong> places; that is, bits shifted out one end are
+shifted into the opposite end. A value of <strong>shift</strong> greater than zero
 corresponds to a left shift, a value of zero corresponds to no shift,
 and a value less than zero corresponds to a right shift. The absolute
-value of SHIFT must be less than SIZE. If the SIZE argument is omitted,
-it is taken to be equivalent to <strong>bit_size</strong>(i).</p>
+value of <strong>shift</strong> must be less than <strong>size</strong>. If the <strong>size</strong> argument is omitted,
+it is taken to be equivalent to <strong>bit_size(i)</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SHIFT</strong></dt>
+      <dt><strong>shift</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SIZE</strong></dt>
+      <dt><strong>size</strong></dt>
       <dd>(Optional) The type shall be <em>integer</em>; the value must be greater than
 zero and less than or equal to <strong>bit_size</strong>(i).</dd>
     </dl>
@@ -45003,7 +45003,7 @@ zero and less than or equal to <strong>bit_size</strong>(i).</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of the same kind as I.</p>
+<p>The return value is of type <em>integer</em> and of the same kind as <strong>i</strong>.</p>
 
 <h2 id="standard"><strong>Standard</strong></h2>
 
