--- a/pr/347/learn/intrinsics/IS_IOSTAT_EOR.html
+++ b/pr/347/learn/intrinsics/IS_IOSTAT_EOR.html
@@ -44985,7 +44985,7 @@ variable with the iostat_eor parameter of the intrinsic module
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>Shall be of the type <em>integer</em>.</dd>
     </dl>
   </li>
@@ -44993,7 +44993,7 @@ variable with the iostat_eor parameter of the intrinsic module
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>Returns a <em>logical</em> of the default kind, which .true. if I has the value
+<p>Returns a <em>logical</em> of the default kind, which .true. if <strong>i</strong> has the value
 which indicates an end of file condition for iostat= specifiers, and is
 .false. otherwise.</p>
 
