--- a/pr/347/learn/intrinsics/LEN_TRIM.html
+++ b/pr/347/learn/intrinsics/LEN_TRIM.html
@@ -44997,14 +44997,14 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>STRING</strong></dt>
+      <dt><strong>string</strong></dt>
       <dd>The input string whose length is to be measured.
 Shall be a scalar of type <em>character</em></dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
@@ -45013,8 +45013,8 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of kind KIND. If KIND is absent,
-the return value is of default integer kind.</p>
+<p>The return value is of type <em>integer</em> and of kind <strong>kind</strong>. If <strong>kind</strong> is absent,
+the return value is of default <em>integer</em> kind.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
