--- a/pr/347/learn/intrinsics/NOT.html
+++ b/pr/347/learn/intrinsics/NOT.html
@@ -45050,7 +45050,7 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>The type shall be <em>integer</em>.</dd>
     </dl>
   </li>
