--- a/pr/347/learn/intrinsics/POPCNT.html
+++ b/pr/347/learn/intrinsics/POPCNT.html
@@ -45056,14 +45056,14 @@
 <h2 id="description"><strong>Description</strong></h2>
 
 <p>Returns the number of bits set in the binary representation of an
-integer.</p>
+<em>integer</em>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>Shall be of type <em>integer</em>.</dd>
     </dl>
   </li>
@@ -45071,7 +45071,7 @@ integer.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type ‘integer’ and of the default integer kind.</p>
+<p>The return value is of type <em>integer</em> and of the default integer kind.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
