--- a/pr/347/learn/intrinsics/POPPAR.html
+++ b/pr/347/learn/intrinsics/POPPAR.html
@@ -45073,7 +45073,7 @@ parity of the number of bits set).</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is equal to 0 if <strong>i</strong> has an even number of bits set and 1 if an odd
+<p>The return value is equal to <strong>0</strong> if <strong>i</strong> has an even number of bits set and 1 if an odd
 number of bits are set.</p>
 
 <p>It is of type <em>integer</em> and of the default <em>integer</em> kind.</p>
