--- a/pr/347/learn/intrinsics/PRESENT.html
+++ b/pr/347/learn/intrinsics/PRESENT.html
@@ -45068,7 +45068,7 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>May be of any type and may be a pointer, scalar or array value, or a
 dummy procedure. It shall be the name of an optional dummy argument
 accessible within the current subroutine or function.</dd>
@@ -45078,7 +45078,7 @@ accessible within the current subroutine or function.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>Returns either TRUE if the optional argument A is present, or FALSE
+<p>Returns either <strong>.true.</strong> if the optional argument <strong>a</strong> is present, or <strong>.false.</strong>
 otherwise.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
