--- a/pr/347/learn/intrinsics/SCAN.html
+++ b/pr/347/learn/intrinsics/SCAN.html
@@ -45087,37 +45087,37 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Scans a STRING for any of the characters in a SET of characters.</p>
+<p>Scans a <strong>string</strong> for any of the characters in a <strong>set</strong> of characters.</p>
 
-<p>If BACK is either absent or equals FALSE, this function returns the
-position of the leftmost character of STRING that is in SET. If BACK
-equals TRUE, the rightmost position is returned. If no character of SET
-is found in STRING, the result is zero.</p>
+<p>If <strong>back</strong> is either absent or equals <strong>.false.</strong>, this function returns the
+position of the leftmost character of <strong>STRING</strong> that is in <strong>set</strong>. If <strong>back</strong>
+equals <strong>.true.</strong>, the rightmost position is returned. If no character of <strong>set</strong>
+is found in <strong>string</strong>, the result is zero.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>STRING</strong></dt>
+      <dt><strong>string</strong></dt>
       <dd>Shall be of type <em>character</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>SET</strong></dt>
+      <dt><strong>set</strong></dt>
       <dd>Shall be of type <em>character</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>BACK</strong></dt>
+      <dt><strong>back</strong></dt>
       <dd>(Optional) shall be of type <em>logical</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>(Optional) An <em>integer</em> initialization expression indicating the kind
 parameter of the result.</dd>
     </dl>
@@ -45126,7 +45126,7 @@ parameter of the result.</dd>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em> and of kind KIND. If KIND is absent,
+<p>The return value is of type <em>integer</em> and of kind <strong>kind</strong>. If <strong>kind</strong> is absent,
 the return value is of default integer kind.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
