--- a/pr/347/learn/intrinsics/TINY.html
+++ b/pr/347/learn/intrinsics/TINY.html
@@ -45175,21 +45175,21 @@ and kind of <em>_x</em>.</p>
 <p>Fortran 95 and later</p>
 <h2 id="see-also"><strong>See Also</strong></h2>
 
-<p><a href="DIGITS">digits(3)</a>,
-<a href="EPSILON">epsilon(3)</a>,
-<a href="EXPONENT">exponent(3)</a>,
-<a href="FRACTION">fraction(3)</a>,
-<a href="HUGE">huge(3)</a>,
-<a href="MAXEXPONENT">maxexponent(3)</a>,
-<a href="MINEXPONENT">minexponent(3)</a>,
-<a href="NEAREST">nearest(3)</a>,
-<a href="PRECISION">precision(3)</a>,
-<a href="RADIX">radix(3)</a>,
-<a href="RANGE">range(3)</a>,
-<a href="RRSPACING">rrspacing(3)</a>,
-<a href="SCALE">scale(3)</a>,
-<a href="SET_EXPONENT">set_exponent(3)</a>,
-<a href="SPACING">spacing(3)</a></p>
+<p><a href="DIGITS"><strong>digits</strong>(3)</a>,
+<a href="EPSILON"><strong>epsilon</strong>(3)</a>,
+<a href="EXPONENT"><strong>exponent</strong>(3)</a>,
+<a href="FRACTION"><strong>fraction</strong>(3)</a>,
+<a href="HUGE"><strong>huge</strong>(3)</a>,
+<a href="MAXEXPONENT"><strong>maxexponent</strong>(3)</a>,
+<a href="MINEXPONENT"><strong>minexponent</strong>(3)</a>,
+<a href="NEAREST"><strong>nearest</strong>(3)</a>,
+<a href="PRECISION"><strong>precision</strong>(3)</a>,
+<a href="RADIX"><strong>radix</strong>(3)</a>,
+<a href="RANGE"><strong>range</strong>(3)</a>,
+<a href="RRSPACING"><strong>rrspacing</strong>(3)</a>,
+<a href="SCALE"><strong>scale</strong>(3)</a>,
+<a href="SET_EXPONENT"><strong>set_exponent</strong>(3)</a>,
+<a href="SPACING"><strong>spacing</strong>(3)</a></p>
 
 
       <div class="container-flex">
