--- a/pr/347/learn/intrinsics/VERIFY.html
+++ b/pr/347/learn/intrinsics/VERIFY.html
@@ -45150,9 +45150,9 @@
 <p>Verifies that all the characters in <strong>string</strong> belong to the set of
 characters in <strong>set</strong>.</p>
 
-<p>If <strong>back</strong> is either absent or equals <strong>false</strong>, this function returns the
+<p>If <strong>back</strong> is either absent or equals <strong>.false.</strong>, this function returns the
 position of the leftmost character of <strong>string</strong> that is not in <strong>set</strong>. If <strong>back</strong>
-equals <strong>true</strong>, the rightmost position is returned. If all characters of
+equals <strong>.true.</strong>, the rightmost position is returned. If all characters of
 <strong>string</strong> are found in <strong>set</strong>, the result is zero.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
