--- a/pr/347/learn/intrinsics/CO_BROADCAST.html
+++ b/pr/347/learn/intrinsics/CO_BROADCAST.html
@@ -44853,7 +44853,7 @@
 index source_image to all images in the current team. <strong>a</strong> becomes defined
 as if by intrinsic assignment. If the execution was successful and <strong>stat</strong>
 is present, it is assigned the value zero. If the execution failed, <strong>stat</strong>
-gets assigned a nonzero value and, if present, ERRMSG gets assigned a
+gets assigned a nonzero value and, if present, <strong>errmsg</strong> gets assigned a
 value describing the occurred error.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
