--- a/pr/347/learn/intrinsics/IPARITY.html
+++ b/pr/347/learn/intrinsics/IPARITY.html
@@ -44972,41 +44972,41 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Reduces with bitwise XOR (exclusive OR) the elements of ARRAY along
-dimension DIM if the corresponding element in MASK is TRUE.</p>
+<p>Reduces with bitwise <em>xor</em> (exclusive <em>or</em>) the elements of <strong>array</strong> along
+dimension <strong>dim</strong> if the corresponding element in <strong>mask</strong> is <strong>.true.</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>Shall be an array of type <em>integer</em></dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) shall be a scalar of type <em>integer</em> with a value in the
-range from “1” to “n”, where “n” equals the rank of ARRAY.</dd>
+range from <strong>“1” to “n”</strong>, where <strong>“n”</strong> equals the rank of <strong>array</strong>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>MASK</strong></dt>
+      <dt><strong>mask</strong></dt>
       <dd>(Optional) shall be of type <em>logical</em> and either be a scalar or an
-array of the same shape as ARRAY.</dd>
+array of the same shape as <strong>array</strong>.</dd>
     </dl>
   </li>
 </ul>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The result is of the same type as ARRAY.</p>
+<p>The result is of the same type as <strong>array</strong>.</p>
 
-<p>If DIM is absent, a scalar with the bitwise XOR of all elements in ARRAY
-is returned. Otherwise, an array of rank “n-1”, where “n” equals the
-rank of ARRAY, and a shape similar to that of ARRAY with dimension DIM
+<p>If <strong>dim</strong> is absent, a scalar with the bitwise <em>xor</em> of all elements in <strong>array</strong>
+is returned. Otherwise, an array of rank <strong>n-1</strong>, where <strong>n</strong> equals the
+rank of <strong>array</strong>, and a shape similar to that of <strong>array</strong> with dimension <strong>dim</strong>
 dropped is returned.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
