--- a/pr/347/learn/intrinsics/IS_CONTIGUOUS.html
+++ b/pr/347/learn/intrinsics/IS_CONTIGUOUS.html
@@ -44981,7 +44981,7 @@ an object with the CONTIGUOUS attribute,</p>
 a nonpointer whole array that is not assumed-shape,</p>
   </li>
   <li>
-    <p><strong>(3)</strong>
+    <p><em>__</em>(3)
 an assumed-shape array that is argument associated with an array
 that is contiguous,</p>
   </li>
@@ -45060,7 +45060,7 @@ components other than zero-sized arrays and</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>A</strong></dt>
+      <dt><strong>a</strong></dt>
       <dd>may be of any type. It shall be an array. If it is a pointer it
 shall be associated.</dd>
     </dl>
@@ -45073,7 +45073,7 @@ shall be associated.</dd>
   <li>
     <dl>
       <dt><strong>Result</strong></dt>
-      <dd>of type Default logical scalar. The result has the value true if A
+      <dd>of type Default logical scalar. The result has the value true if <strong>a</strong>
 is contiguous, and false otherwise.</dd>
     </dl>
   </li>
