--- a/pr/347/learn/intrinsics/LGE.html
+++ b/pr/347/learn/intrinsics/LGE.html
@@ -44989,11 +44989,11 @@
 
 <p>Determines whether one string is lexically greater than or equal to
 another string, where the two strings are interpreted as containing
-ASCII character codes. If the String A and String B are not the same
+ASCII character codes. If the String <strong>a</strong> and String <strong>b</strong> are not the same
 length, the shorter is compared as if spaces were appended to it to form
 a value that has the same length as the longer.</p>
 
-<p>In general, the lexical comparison intrinsics LGE, LGT, LLE, and LLT
+<p>In general, the lexical comparison intrinsics <strong>lge</strong>(3), <strong>lgt</strong>(3), <strong>lle</strong>(3), and <strong>llt</strong>(3)
 differ from the corresponding intrinsic operators .ge., .gt., .le., and
 .lt., in that the latter use the processor’s character ordering (which
 is not ASCII on some targets), whereas the former always use the ASCII
@@ -45033,15 +45033,20 @@ on the ASCII ordering.</p>
 of arguments, and search for certain arguments:</p>
 
 <ul>
-  <li>
-    <p><strong>Elemental:</strong>
-<a href="ADJUSTL"><strong>adjustl</strong>(3)</a>, <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>, <a href="INDEX"><strong>index</strong>(3)</a>, <a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,
-<a href="SCAN"><strong>scan</strong>(3)</a>, <a href="VERIFY"><strong>verify</strong>(3)</a></p>
-  </li>
-  <li>
-    <p><strong>Nonelemental:</strong>
-<a href="REPEAT"><strong>repeat</strong>(3)</a>, <a href="TRIM"><strong>trim</strong>(3)</a></p>
-  </li>
+  <li><strong>Elemental:</strong>
+ <a href="ADJUSTL"><strong>adjustl</strong>(3)</a>,
+ <a href="ADJUSTR"><strong>adjustr</strong>(3)</a>,
+ <a href="INDEX"><strong>index</strong>(3)</a>,
+ <a href="LEN_TRIM"><strong>len_trim</strong>(3)</a>,</li>
+</ul>
+
+<p><a href="SCAN"><strong>scan</strong>(3)</a>,
+ <a href="VERIFY"><strong>verify</strong>(3)</a></p>
+
+<ul>
+  <li><strong>Nonelemental:</strong>
+ <a href="REPEAT"><strong>repeat</strong>(3)</a>,
+ <a href="TRIM"><strong>trim</strong>(3)</a></li>
 </ul>
 
 
