--- a/pr/347/learn/intrinsics/MASKR.html
+++ b/pr/347/learn/intrinsics/MASKR.html
@@ -45005,7 +45005,7 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p><strong>maskr(i[, kind])</strong> has its rightmost I bits set to 1, and the
+<p><strong>maskr(i[, kind])</strong> has its rightmost <strong>i</strong> bits set to 1, and the
 remaining bits set to 0.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
@@ -45013,13 +45013,13 @@ remaining bits set to 0.</p>
 <ul>
   <li>
     <dl>
-      <dt><strong>I</strong></dt>
+      <dt><strong>i</strong></dt>
       <dd>Shall be of type <em>integer</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>KIND</strong></dt>
+      <dt><strong>kind</strong></dt>
       <dd>Shall be a scalar constant expression of type <em>integer</em>.</dd>
     </dl>
   </li>
@@ -45027,7 +45027,7 @@ remaining bits set to 0.</p>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The return value is of type <em>integer</em>. If KIND is present, it specifies
+<p>The return value is of type <em>integer</em>. If <strong>kind</strong> is present, it specifies
 the kind value of the return type; otherwise, it is of the default
 integer kind.</p>
 
