--- a/pr/347/learn/intrinsics/NORM2.html
+++ b/pr/347/learn/intrinsics/NORM2.html
@@ -45043,34 +45043,34 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Calculates the Euclidean vector norm (L_2 norm) of ARRAY along
-dimension DIM.</p>
+<p>Calculates the Euclidean vector norm (L_2 norm) of <strong>array</strong> along
+dimension <strong>dim</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>ARRAY</strong></dt>
+      <dt><strong>array</strong></dt>
       <dd>Shall be an array of type <em>real</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) shall be a scalar of type <em>integer</em> with a value in the
-range from 1 to n, where n equals the rank of ARRAY.</dd>
+range from 1 to n, where n equals the rank of <strong>array</strong>.</dd>
     </dl>
   </li>
 </ul>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The result is of the same type as ARRAY.</p>
+<p>The result is of the same type as <strong>array</strong>.</p>
 
-<p>If DIM is absent, a scalar with the square root of the sum of squares of
-the elements of ARRAY is returned. Otherwise, an array of rank n-1,
-where “n” equals the rank of ARRAY, and a shape similar to that of ARRAY
+<p>If <strong>dim</strong> is absent, a scalar with the square root of the sum of squares of
+the elements of <strong>array</strong> is returned. Otherwise, an array of rank <strong>n-1</strong>,
+where <strong>n</strong> equals the rank of <strong>array</strong>, and a shape similar to that of <strong>array</strong>
 with dimension DIM dropped is returned.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
