--- a/pr/347/learn/intrinsics/NUM_IMAGES.html
+++ b/pr/347/learn/intrinsics/NUM_IMAGES.html
@@ -45056,13 +45056,13 @@
 <ul>
   <li>
     <dl>
-      <dt><strong>DISTANCE</strong></dt>
+      <dt><strong>distance</strong></dt>
       <dd>(optional, <strong>intent</strong>(in)) Nonnegative scalar integer</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>FAILED</strong></dt>
+      <dt><strong>failed</strong></dt>
       <dd>(optional, <strong>intent</strong>(in)) Scalar logical expression</dd>
     </dl>
   </li>
@@ -45070,12 +45070,12 @@
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>Scalar default-kind integer. If DISTANCE is not present or has value 0,
+<p>Scalar default-kind <em>integer</em>. If <strong>distance</strong> is not present or has value 0,
 the number of images in the current team is returned. For values smaller
 or equal distance to the initial team, it returns the number of images
-index on the ancestor team which has a distance of DISTANCE from the
-invoking team. If DISTANCE is larger than the distance to the initial
-team, the number of images of the initial team is returned. If FAILED is
+index on the ancestor team which has a distance of <strong>distance</strong> from the
+invoking team. If <strong>distance</strong> is larger than the distance to the initial
+team, the number of images of the initial team is returned. If <strong>failed</strong> is
 not present the total number of images is returned; if it has the value
 .true., the number of failed images is returned, otherwise, the number
 of images which do have not the failed status.</p>
