--- a/pr/347/learn/intrinsics/PARITY.html
+++ b/pr/347/learn/intrinsics/PARITY.html
@@ -45053,36 +45053,36 @@
 
 <h2 id="description"><strong>Description</strong></h2>
 
-<p>Calculates the parity (i.e. the reduction using .xor.) of MASK along
-dimension DIM.</p>
+<p>Calculates the parity (i.e. the reduction using .xor.) of <strong>mask</strong> along
+dimension <strong>dim</strong>.</p>
 
 <h2 id="arguments"><strong>Arguments</strong></h2>
 
 <ul>
   <li>
     <dl>
-      <dt><strong>MASK</strong></dt>
+      <dt><strong>mask</strong></dt>
       <dd>Shall be an array of type <em>logical</em>.</dd>
     </dl>
   </li>
   <li>
     <dl>
-      <dt><strong>DIM</strong></dt>
+      <dt><strong>dim</strong></dt>
       <dd>(Optional) shall be a scalar of type <em>integer</em> with a value in the
-range from 1 to n, where n equals the rank of ARRAY.</dd>
+range from <strong>1 to n</strong>, where <strong>n</strong> equals the rank of <strong>array</strong>.</dd>
     </dl>
   </li>
 </ul>
 
 <h2 id="returns"><strong>Returns</strong></h2>
 
-<p>The result is of the same type as MASK.</p>
+<p>The result is of the same type as <strong>mask</strong>.</p>
 
-<p>If DIM is absent, a scalar with the parity of all elements in MASK is
-returned: .true. if an odd number of elements are .true. and</p>
+<p>If <strong>dim</strong> is absent, a scalar with the parity of all elements in <strong>mask</strong> is
+returned: <strong>.true.</strong> if an odd number of elements are <strong>.true.</strong> and</p>
 
-<p>where “n” equals the rank of MASK, and a shape similar to that of MASK
-with dimension DIM dropped is returned.</p>
+<p>where <strong>n</strong> equals the rank of <strong>mask</strong>, and a shape similar to that of <strong>mask</strong>
+with dimension <strong>dim</strong> dropped is returned.</p>
 
 <h2 id="examples"><strong>Examples</strong></h2>
 
